<resources>
    <string name="app_name">MadLevel1Task1</string>
    <string name="top_text">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="btn_text_lower">Lower</string>
    <string name="btn_text_higher">Higher</string>
    <string name="btn_text_equal">Equals</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="correctanswer">Correct!!</string>
    <string name="incorrectanswer">Incorrect!!</string>



</resources>